# state_machine_for_damvi

./: CMakeLists.txt  README.md  package.xml
cordinate/install/: local_setup.sh  setup.sh
cordinate/install/cordinate/lib/cordinate/: cordinate_converter
cordinate/install/cordinate/share/cordinate/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
cordinate/install/cordinate/share/cordinate/cmake/: ament_cmake_export_include_directories-extras.cmake  cordinateConfig.cmake
cordinate/log/: latest_build
launch/: object_detect_launch.py
object_detector/: CMakeLists.txt  package.xml
object_detector/install/: local_setup.sh  setup.sh
object_detector/install/object_detection/lib/object_detection/: obstacle_detector_node  scan_processor_node  visualization_node
object_detector/install/object_detection/share/ament_index/resource_index/package_run_dependencies/: object_detection
object_detector/install/object_detection/share/object_detection/: local_setup.sh  package.sh
object_detector/install/object_detection/share/object_detection/config/: params.yaml
object_detector/install/object_detection/share/object_detection/launch/: object_detect_launch.py
object_detector/launch/: object_detect_launch.py
object_detector/log/: latest_build
object_detector/src/: delay_monitor_node.cpp  obstacle_detector_node.cpp  scan_processor_node.cpp  tracker.py  visualization_node.cpp
src/: state_machine.py  tracker.py
